--- a/Preprocessing_Greyscale_conversion.ipynb
+++ b/Preprocessing_Greyscale_conversion.ipynb
@@ -32,8 +32,8 @@
     "col1=list('duration protocol_type service flag src_bytes dst_bytes land wrong_fragment urgent hot num_failed_logins logged_in num_compromised root_shell su_attempted num_root num_file_creations num_shells num_access_files num_outbound_cmds is_host_login is_guest_login count srv_count serror_rate srv_serror_rate rerror_rate srv_rerror_rate same_srv_rate diff_srv_rate srv_diff_host_rate dst_host_count dst_host_srv_count dst_host_same_srv_rate dst_host_diff_srv_rate dst_host_same_src_port_rate dst_host_srv_diff_host_rate dst_host_serror_rate dst_host_srv_serror_rate dst_host_rerror_rate dst_host_srv_rerror_rate label') \n",
     "\n",
     "\n",
-    "data_train= pd.read_csv('C:/Users/Devanshu/Desktop/faltu/KDDTrain+.csv', sep=',', names= col,header=None)\n",
-    "data_test=pd.read_csv('C:/Users/Devanshu/Desktop/faltu/data without misslabel/KDDTest+_without_misslabel.csv', sep=',', names= col,header=None)\n",
+    "data_train= pd.read_csv('C:/Users/jaydeep/Downloads/NSLKKD-to-Image-dataset-master/KDDTrain+.csv', sep=',', names= col,header=None)\n",
+    "data_test=pd.read_csv('C:/Users/jaydeep/Downloads/NSLKKD-to-Image-dataset-master/data without misslabel/KDDTest+_without_misslabel.csv', sep=',', names= col,header=None)\n",
     "print(data_train.shape)\n",
     "print(data_test.shape)"
    ]
@@ -89,7 +89,7 @@
     "onehotlabels = enc.transform(tra).toarray()\n",
     "onehotlabels.shape\n",
     "\n",
-    "np.savetxt('C:/Users/Devanshu/Desktop/faltu/data without misslabel/label_encoded_train.csv', onehotlabels, fmt='%.18e', delimiter=',', newline='\\n', header='', footer='', comments='# ')"
+    "np.savetxt('C:/Users/jaydeep/Downloads/NSLKKD-to-Image-dataset-master/data without misslabel/label_encoded_train.csv', onehotlabels, fmt='%.18e', delimiter=',', newline='\\n', header='', footer='', comments='# ')"
    ]
   },
   {
@@ -120,7 +120,7 @@
     "enc1.fit(tra_test)\n",
     "onehotlabels1 = enc1.transform(tra_test).toarray()\n",
     "onehotlabels1.shape\n",
-    "np.savetxt('C:/Users/Devanshu/Desktop/faltu/data without misslabel/label_encoded_test.csv', onehotlabels1, fmt='%.18e', delimiter=',', newline='\\n', header='', footer='', comments='# ')"
+    "np.savetxt('C:/Users/jaydeep/Downloads/NSLKKD-to-Image-dataset-master/data without misslabel/label_encoded_test.csv', onehotlabels1, fmt='%.18e', delimiter=',', newline='\\n', header='', footer='', comments='# ')"
    ]
   },
   {
@@ -190,7 +190,7 @@
     "        \n",
     "\n",
     "        \n",
-    "#data.to_csv('C:\\\\Users\\\\Devanshu\\\\Desktop\\\\concat_label.csv', sep=',', na_rep='', float_format=None, index_label=None)\n",
+    "#data.to_csv('C:\\\\Users\\\\jaydeep\\\\downloads\\\\concat_label.csv', sep=',', na_rep='', float_format=None, index_label=None)\n",
     "\n",
     "# Min-max normaliztion on dataframe\n",
     "\n",
@@ -200,7 +200,7 @@
     "\n",
     "#print(f)\n",
     "\n",
-    "np.savetxt('C:/Users/Devanshu/Desktop/faltu/data without misslabel/train_test_without_miss_normalize.csv', f, fmt='%.18e', delimiter=',', newline='\\n', header='', footer='', comments='# ')"
+    "np.savetxt('C:/Users/jaydeep/Downloads/NSLKKD-to-Image-dataset-master/data without misslabel/train_test_without_miss_normalize.csv', f, fmt='%.18e', delimiter=',', newline='\\n', header='', footer='', comments='# ')"
    ]
   },
   {
@@ -211,7 +211,7 @@
    },
    "outputs": [],
    "source": [
-    "disct_df= pd.read_csv('C:/Users/Devanshu/Desktop/faltu/train_test_with_misslabel.csv', sep=',',header=None)\n",
+    "disct_df= pd.read_csv('C:/Users/jaydeep/Downloads/NSLKKD-to-Image-dataset-master/train_test_with_misslabel.csv', sep=',',header=None)\n",
     "#print(disct_df.head(3))"
    ]
   },
@@ -272,7 +272,7 @@
    "source": [
     "final_op= interval(disct_df)\n",
     "print(final_op.shape)\n",
-    "#np.savetxt('C:\\\\Users\\\\Devanshu\\\\Desktop\\\\feature_discretized.csv',final_op,fmt='%5s',delimiter=',',newline='\\n')"
+    "#np.savetxt('C:\\\\Users\\\\jaydeep\\\\Downloads\\\\feature_discretized.csv',final_op,fmt='%5s',delimiter=',',newline='\\n')"
    ]
   },
   {
@@ -344,7 +344,7 @@
    ],
    "source": [
     "print(temp)\n",
-    "np.savetxt('C:/Users/Devanshu/Desktop/faltu/greyscale_train_test_with_misslabel.csv',temp,fmt='%5s',delimiter=',',newline='\\n')"
+    "np.savetxt('C:/Users/jaydeep/Downloads/NSLKKD-to-Image-dataset-master/greyscale_train_test_with_misslabel.csv',temp,fmt='%5s',delimiter=',',newline='\\n')"
    ]
   }
  ],
